[package]
name = "mineswepttd"
version = "0.2.0"
authors = ["Ian Pringle <pard@0x44.pw>"]
edition = "2018"
repository = "https://github.com/pard68/mineswepttd/"
license = "GPL-3.0"
keywords = ["minesweeper", "game"]
description = "A RESTful Minesweeper server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_seeder = "0.2"
rocket = "0.5.0-rc.1"
petname= "1"
